[package]
name = "breakout"
version = "0.1.0"
authors = ["pi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.26.0-alpha3"
image = "*"
cgmath = "0.17"
toml = "0.5.5"
serde = "1.0.102"
serde_derive = "1.0.102"
